cif/org.eclipse.escet.cif.tests/tests/checks/EventNoPureMonitorsCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ---------------------------------------------
  (1/1) Event is only used as a monitor event..
  ---------------------------------------------
   * In the top-level scope of the specification:
     - event monEvery_norm;
             ^
     - event monEverySome_norm;
             ^
     - event monSome_norm;
             ^
